[gd_scene load_steps=5 format=3 uid="uid://bycoiko15s4xn"]

[ext_resource type="Script" path="res://Scripts/board.gd" id="1_a0vux"]
[ext_resource type="PackedScene" uid="uid://bps1ctva2yage" path="res://Scenes/enemy_spawner.tscn" id="4_islbf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkgwq"]
size = Vector2(20, 216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53uh4"]
size = Vector2(33, 216)

[node name="Board" type="Node2D"]
script = ExtResource("1_a0vux")

[node name="Bullet limit" type="Area2D" parent="."]
position = Vector2(209, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet limit"]
position = Vector2(-1, -20)
shape = SubResource("RectangleShape2D_kkgwq")

[node name="enemy_spawner" parent="." instance=ExtResource("4_islbf")]
position = Vector2(247, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(6, -20)
zoom = Vector2(3, 3)

[node name="Enemy Goal" type="Area2D" parent="."]
position = Vector2(-227, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Goal"]
position = Vector2(6.5, -20)
shape = SubResource("RectangleShape2D_53uh4")

[connection signal="body_entered" from="Bullet limit" to="." method="_on_bullet_limit_body_entered"]
[connection signal="area_entered" from="Enemy Goal" to="." method="_on_enemy_goal_area_entered"]
